# solana-stablecoin-standard

./: .env.example  .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  test-local.js  tsconfig.json
.github/workflows/: ci.yml
backend/src/: index.ts
backend/src/routes/: compliance.ts  index.ts  indexer.ts  mint-burn.ts  webhook.ts
backend/src/services/: compliance.ts  indexer.ts  mint-burn.ts  webhook.ts
cli/src/: cli.ts  index.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
monitoring/: prometheus.yml
programs/sss_token/: Cargo.toml
programs/sss_token/src/: error.rs  lib.rs
programs/sss_token/src/instructions/: authority.rs  blacklist.rs  burn.rs  close.rs  freeze.rs  initialize.rs  metadata_ix.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs  thaw.rs
programs/sss_token/src/state/: blacklist.rs  config.rs  mod.rs  roles.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: lib.rs  state.rs
sdk/: tsconfig.json
sdk/src/: compliance.ts  config.ts  index.ts  presets.ts  stablecoin.ts  types.ts  utils.ts
sdk/src/idl/: sss_token.json
tests/: compliance.test.ts  config.test.ts  integration.ts  presets.test.ts  sdk.test.ts  sss_token.ts  types.test.ts  utils.test.ts
