[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "6.0"
spl-token-2022 = "6.0"
spl-transfer-hook-interface = "0.9"
spl-tlv-account-resolution = "0.9"
solana-program = "~2.1.0"
bytemuck = "1.14"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
