[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-token = "8.0.1"
spl-token-2022 = "8.0.1"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
solana-program = "2.1.0"
bytemuck = "1.22"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
