[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
spl-token = "=4.0.0"
spl-token-2022 = "=0.9.0"
spl-transfer-hook-interface = "=0.5.0"
spl-tlv-account-resolution = "=0.5.0"
solana-program = "=1.18.0"
bytemuck = "=1.18.0"
constant_time_eq = "=0.3.1"
blake3 = "=1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
