[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS) - Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022", "metadata"] }
spl-token-2022 = { workspace = true }
bytemuck = { workspace = true }
