[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS) - Transfer Hook for Blacklist Enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
bytemuck = { workspace = true }
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
